<resources>
    <string name="hello_world">Hola Mundo! :D</string>
    <string name="app_name">NombreEnProceso</string>
    <string name="logo_description">Logo</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="register_text">¿No tienes una cuenta? ¡Regístrate!</string>
    <string name="forgot_password_text">¿Olvidaste tu contraseña?</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="register_button_text">Registrar</string>
    <string name="login_text">¿Ya tienes una cuenta? ¡Inicia Sesión!</string>
    <string name="instruccion_remember_password">Por favor, introduzca su dirección de correo electrónico para recibir su contraseña.</string>
</resources>
